# Cpp.Course.Lab1

./: CMakeLists.txt  README.md
src/date_cli/: CMakeLists.txt
src/date_cli/src/: main.cpp
src/date_core/: CMakeLists.txt
src/date_core/include/lab1/: date.hpp
src/date_core/src/: date.cpp
tests/: CMakeLists.txt  tests.cpp
